...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Z1i-QF-DEz">
                                <rect key="frame" x="0.0" y="520" width="320" height="48"/>
                                <color key="backgroundColor" red="1" green="0.078622190559999999" blue="0.089657637080000005" alpha="0.60000002379999995" colorSpace="custom" customColorSpace="sRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="8jH-i3-Oke"/>
                                </constraints>
                                <state key="normal" title="Back">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
                                <connections>
                                    <action selector="back:" destination="csW-zi-pp8" eventType="touchUpInside" id="z20-dM-63u"/>
                                </connections>
                            </button>
...
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="r2x-fh-PQg">
                                <rect key="frame" x="0.0" y="520" width="320" height="48"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <color key="backgroundColor" red="1" green="0.078622190559999999" blue="0.089657637080000005" alpha="0.60000002379999995" colorSpace="custom" customColorSpace="sRGB"/>
                                <state key="normal" title="Logout">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
                                <connections>
                                    <action selector="logoutbutton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Drf-da-fug"/>
                                </connections>
                            </button>
...
                                <rect key="frame" x="0.0" y="222" width="320" height="70"/>
                                <color key="backgroundColor" red="1" green="0.078622190559999999" blue="0.089657637080000005" alpha="0.60000002379999995" colorSpace="custom" customColorSpace="sRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="70" id="XPm-0b-JWc"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                <state key="normal" title="Unlock">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
                                <connections>
                                    <action selector="unLock:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ppS-np-q6H"/>
                                </connections>
                            </button>
...
                                <rect key="frame" x="0.0" y="292" width="320" height="70"/>
                                <color key="backgroundColor" red="0.1344255083" green="0.420441854" blue="1" alpha="0.60000002379999995" colorSpace="custom" customColorSpace="sRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="70" id="fNq-w9-ubE"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                <state key="normal" title="Lock">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
                                <connections>
                                    <action selector="lock:" destination="BYZ-38-t0r" eventType="touchUpInside" id="uZj-3M-Vqb"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="v3C-6O-lYX">
                                <rect key="frame" x="0.0" y="362" width="320" height="70"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <color key="backgroundColor" red="0.84436824460000004" green="0.91689604920000001" blue="0.86903465359999998" alpha="0.60000002379999995" colorSpace="custom" customColorSpace="sRGB"/>
                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                <state key="normal" title="See in-and-out">
                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                    <color key="titleShadowColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
                                <connections>
                                    <segue destination="8u1-Hh-X99" kind="presentation" id="2AX-96-nCm"/>
                                </connections>
...
